[package]
name = "toshiba_tv_50vl5a63db"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.15"
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.144"
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
tower-request-id = "0.2.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
wakey = "0.2.2"
